--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Sheva</title>
-  <link rel="icon" href="img/logo.png">
+  <link rel="icoon" href="img/logo.png">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
 </head>
@@ -54,11 +54,11 @@
   <section id="about" class="about">
 
     <div class="container">
-      <div class="row text-center mb-3">
+      <div class="row text-center mb-4">
         <div class="col">
           <h2>About me</h2>
         </div>
-        <div class="row justify-content-center fs-5 text-center">
+        <div class="row justify-content-center fs-4text-center">
           <div class="col-4 md-4 ">
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Molestiae doloribus odit laudantium magnam
               sunt. Ducimus et cum voluptas esse, veniam quos nulla vero, minima, odio sed distinctio praesentium magnam
