--- a/index.html
+++ b/index.html
@@ -54,8 +54,8 @@
   <section id="about" class="about">
 
     <div class="container">
-      <div class="row text-center mb-4">
-        <div class="col">
+      <div class="row text-md-center ">
+        <div class="col-4 -md-4">
           <h2>About me</h2>
         </div>
         <div class="row justify-content-center fs-4text-center">
