--- a/index.html
+++ b/index.html
@@ -60,9 +60,7 @@
         </div>
         <div class="row justify-content-center fs-4text-center">
           <div class="col-4 md-4 ">
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Molestiae doloribus odit laudantium magnam
-              sunt. Ducimus et cum voluptas esse, veniam quos nulla vero, minima, odio sed distinctio praesentium magnam
-              porro.</p>
+            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Optio, accusamus! Pariatur incidunt laudantium harum facilis perferendis porro nisi delectus eaque accusamus sint vero tempora, in cum. Culpa, nulla? Adipisci, alias.</p>
           </div>
         </div>
 
