--- a/index.html
+++ b/index.html
@@ -54,13 +54,15 @@
   <section id="about" class="about">
 
     <div class="container">
-      <div class="row text-md-center ">
-        <div class="col-4 -md-4">
+      <div class="row text-center mb-4">
+        <div class="col">
           <h2>About me</h2>
         </div>
         <div class="row justify-content-center fs-4 text-center">
           <div class="col-4 md-4 ">
-            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Optio, accusamus! Pariatur incidunt laudantium harum facilis perferendis porro nisi delectus eaque accusamus sint vero tempora, in cum. Culpa, nulla? Adipisci, alias.</p>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Molestiae doloribus odit laudantium magnam
+              sunt. Ducimus et cum voluptas esse, veniam quos nulla vero, minima, odio sed distinctio praesentium magnam
+              porro.</p>
           </div>
         </div>
 
