--- a/index.html
+++ b/index.html
@@ -54,11 +54,11 @@
   <section id="about" class="about">
 
     <div class="container">
-      <div class="row text-center mb-4">
-        <div class="col">
+      <div class="row justify-content-center mb-4">
+        <div class="col md-4">
           <h2>About me</h2>
         </div>
-        <div class="row justify-content-center fs-4 text-center">
+        <div class="row justify-content-center md-4 text-center">
           <div class="col-4 md-4 ">
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Molestiae doloribus odit laudantium magnam
               sunt. Ducimus et cum voluptas esse, veniam quos nulla vero, minima, odio sed distinctio praesentium magnam
