--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
   <section id="about" class="about">
 
     <div class="container">
-      <div class="row justify-content-center mb-4">
+      <div class="text-center mb-4">
         <div class="col md-4">
           <h2>About me</h2>
         </div>
