--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
           <h2>About me</h2>
         </div>
         <div class="row text-center md-4">
-          <div class="col-4 -md-4 ">
+          <div class="col text-md-center md-4 ">
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Molestiae doloribus odit laudantium magnam
               sunt. Ducimus et cum voluptas esse, veniam quos nulla vero, minima, odio sed distinctio praesentium magnam
               porro.</p>
