--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
   <!--HERO -->
   <section class="jumbotron text-center">
 
-    <img src="img/Sheva.jpg" alt="Sheva " width="500" height="" class="rounded-circle img-fluid " alt="Photo">
+    <img src="img/Sheva.jpg" alt="Sheva " width="500" height="" class="float-start rounded-circle img-fluid " alt="Photo">
     <h1 class="display-4">Sheva Victoria Thelma</h1>
     <p class="lead">Koboy dunia maya</p>
     <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
