--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
 <body id="home">
   <!-- Navbar -->
-  <nav class="navbar  navbar-expand-lg bg-warning fixed-top">
+  <nav class="navbar  navbar-expand-lg shadow p-3 mb-5 rounded .bg-warning.bg-gradient  fixed-top">
     <div class="container-sm">
       <a class="navbar-brand" href="#"><img src="img/logo.png" alt="logo" width="50" height="50">SHEVA VICTORIA
         THELMA</a>
